--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
   eyeicon.onclick=function(){
     if(password.type=="password"){
       password.type="text";
+      eyicon.class="glyphicon glyphicon-eye-open"
     }else{
       password.type="password";
+      eyeicon.class="glyphicon glyphicon-eye-close"
     }
   }
 </script>
